hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_int_to_int_is_required.php.exp
File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 6, characters 26-36:
Invalid argument (Typing[4110])
  File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 3, characters 33-48:
  Expected `dict<int, int>`
  File "disallows_array_of_int_when_array_of_int_to_int_is_required.php", line 5, characters 15-25:
  But got `vec<int>`
